crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.default-param-accesses-local/error.txt
Found 1 error:

Todo: (BuildHIR::node.lowerReorderableExpression) Expression type `ArrowFunctionExpression` cannot be safely reordered

error.default-param-accesses-local.ts:3:6
  1 | function Component(
  2 |   x,
> 3 |   y = () => {
    |       ^^^^^^^
> 4 |     return x;
    | ^^^^^^^^^^^^^
> 5 |   }
    | ^^^^ (BuildHIR::node.lowerReorderableExpression) Expression type `ArrowFunctionExpression` cannot be safely reordered
  6 | ) {
  7 |   return y();
  8 | }
